--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ body {
 /* Write all remaining styles here */
 
 #copyright{
-  float:right;
-  padding-top: -10px;
+ 
+  padding:10px 0px 10px 400px;
 }
 
 
